landing page progress

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     body {
-        background-color: black;
+        background-color: whitesmoke;
     }
 </style>
 
@@ -30,10 +30,17 @@
       </nav>
 
 
-      <div class="container">
+      <div class="container-fluid bg-image text-white pb-5" style="background-image: url(comicBG.jpg); background-color: rgb(87, 85, 85); background-blend-mode: multiply;">
 
+        <div class="col">
         <div class="row pt-5">
-            <div class="col-8 text-white display-1">ComicHub</div>
+            <div class="col-8  display-3">ComicHub</div>
+
+            </div>  
+
+            <div class="col">
+              <h2>A public database for Marvel Comics</h2>
+            </div>
         </div>
 
       </div>
