--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="col">
         <div class="row pt-5">
-            <div class="col-8  display-3">ComicHub</div>
+            <div class="col-8 font-weight-bold  display-4">ComicHub</div>
 
             </div>  
 
@@ -96,6 +96,12 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+</div>
+
+<div class="container mt-4">
+<h1 class="text-center">New Releases</h1>
+
 
 </div>
 
