--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     filter: invert(100%);
 }
 </style>
-<script defer type="module" src="index.js"></script>
+<script defer  src="index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/md5@2.3.0/dist/md5.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
