--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
 
 <div class="container mt-4">
-<h1 class="text-center">New Releases</h1>
+<h1 class="text-center mb-4"><u>New Releases</u></h1>
 
 
 </div>
