--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <body>
     
-  <nav class="navbar navbar-expand-lg navbar-light text-white " style="background-color: rgb(207, 92, 92); ">
-    <a class="navbar-brand" href="#">Navbar</a>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(207, 92, 92); ">
+    <a class="navbar-brand " href="#">ComicHub</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,7 +42,7 @@
   </nav>
 
 
-      <div class="container-fluid bg-image text-white " style="background-image: url(comicBG.jpg); background-color: rgb(87, 85, 85); background-blend-mode: multiply; padding-bottom:12rem;">
+      <div class="container-fluid bg-image text-white pb-6" style="background-image: url(comicBG.jpg); background-color: rgb(87, 85, 85); background-blend-mode: multiply; padding-bottom:12rem;">
 
         <div class="col">
         <div class="row pt-5">
@@ -62,7 +62,7 @@
       </div>
 
 
-      <div id="carouselContainer" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselContainer" class="carousel slide mt-0" data-bs-ride="carousel">
         <div class="carousel-inner">
           <!-- Carousel items will be injected here -->
         </div>
