--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   </nav>
 
 
-      <div class="container-fluid bg-image text-white pb-6" style="background-image: url(comicBG.jpg); background-color: rgb(87, 85, 85); background-blend-mode: multiply; padding-bottom:12rem;">
+      <div class="container-fluid bg-image text-white text-center pb-6" style="background-image: url(comicBG.jpg); background-color: rgb(87, 85, 85); background-blend-mode: multiply; padding-bottom:12rem;">
 
         <div class="col">
         <div class="row pt-5">
-            <div class="col-8 font-weight-bold  display-4">ComicHub</div>
+            <div class=" font-weight-bold  display-4">ComicHub</div>
 
             </div>  
 
@@ -62,19 +62,6 @@
       </div>
 
 
-      <div id="carouselContainer" class="carousel slide mt-0" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <!-- Carousel items will be injected here -->
-        </div>
-        <a class="carousel-control-prev" href="#carouselContainer" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselContainer" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </a>
-      </div>
 
 <div class="container mt-4">
 <h1 class="text-center mb-4"><u>New Releases</u></h1>
