--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
 <body>
     
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(207, 92, 92); ">
-    <a class="navbar-brand " href="#">ComicHub</a>
+    <a class="navbar-brand " href="index.html">ComicHub</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="authors.html">Authors</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Search</a>
+          <a class="nav-link" href="search.html">Search</a>
         </li>
        
       </ul>
@@ -55,7 +55,9 @@
             </div>
 
             <div class="col">
-              <button type="button" class="btn text-white btn-lg mt-4" style="background-color: rgb(207, 92, 92);">Search Now!</button>
+              <a href="search.html" target="_blank">
+              <button type="button" href="search.html "class="btn text-white btn-lg mt-4" style="background-color: rgb(207, 92, 92);">Search Now!</button>
+            </a>
             </div>
         </div>
 
