fixed button color

--- a/search.html
+++ b/search.html
@@ -41,7 +41,7 @@
     <div class="container mt-4">
         <label for="heroSearch" class="form-label">Search for a hero:</label>
         <input type="text" id="heroSearch" class="form-control" placeholder="Enter hero name...">
-        <button id="searchButton" class="btn btn-primary mt-2 background-color: rgb(207, 92, 92)">Search</button>
+        <button id="searchButton" class="btn btn-primary mt-2 "style="background-color: rgb(207, 92, 92);">Search</button>
       </div>
       
       <!-- Container for comics by the hero -->
