--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="search.html">Search</a>
+            <a class="nav-link" href="findcomic.html">Search Comics</a>
+          </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="findhero.html">Search Hero</a>
         </li>
        
       </ul>
