--- a/findcomic.html
+++ b/findcomic.html
@@ -44,13 +44,11 @@
       </nav>
 
 
-  l
-Copy code
 <!-- Search bar -->
 <div class="container mt-4">
   <label for="comicSearch" class="form-label">Search for a comic title:</label>
   <input type="text" id="comicSearch" class="form-control" placeholder="Enter comic title...">
-  <button id="searchButton" class="btn btn-primary mt-2">Search</button>
+  <button id="searchButton" style="background-color: rgb(207, 92, 92)" class="btn btn-primary mt-2">Search</button>
 </div>
 
 <!-- Container for comic search results -->
