--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(207, 92, 92); ">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: rgb(207, 92, 92); ">
     <a class="navbar-brand " href="index.html">ComicHub</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -57,8 +57,8 @@
             </div>
 
             <div class="col">
-              <a href="search.html" target="_blank">
-              <button type="button" href="search.html "class="btn text-white btn-lg mt-4" style="background-color: rgb(207, 92, 92);">Search Now!</button>
+              <a href="findcomic.html" target="_blank">
+              <button type="button" href="findcomic.html "class="btn text-white btn-lg mt-4" style="background-color: rgb(207, 92, 92);">Search Now!</button>
             </a>
             </div>
         </div>
